--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,26 @@
+html { visibility: hidden;}
+header, main, footer, .display-page, .breadcrumb-dn {
+  padding-left: 195px;
+}
+
 body {
   margin-bottom: 55px;
-  background: #ececec
+  background: #f4f4f4
+}
+
+#modal-page .modal-content {
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.container.index {
+  background-color: #fff;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.pattern-7 {
+  background: url(../img/overlays/07.png) fixed rgba(0,0,0,0.5)!important;
 }
 
 /* HEADER */
@@ -9,15 +29,17 @@ body {
   background-color: #3a3a3a;
 }
 .header {
-  background-image: linear-gradient(170deg, rgb(53, 116, 199),  rgb(97, 169, 190));
-  height: 180px;
+  /* background-image: linear-gradient(170deg, rgb(53, 116, 199),  rgb(97, 169, 190)); */
+  /* height: 180px; */
   color: #fff;
-  z-index: 9999;
-}
-.header > .row {
-  height: 180px;
 }
 .bracket {
+  font-size: 400px;
+  line-height: 380px;
+  color: #fff;
+  font-weight: 900;
+}
+.bracket-old {
   font-size: 150px;
   line-height: 180px;
   font-weight: 900;
@@ -28,7 +50,10 @@ body {
   background-clip: text;
 }
 .header  h1 {
-  font-size: 45px;
+  font-size: 75px;
+  font-weight: 800;
+}
+.header h2 {
   font-weight: 700;
 }
 .header .btn-contato {
@@ -52,12 +77,13 @@ body {
   vertical-align: middle;
 }
 .parallax {
-  height: 50px;
   background-image: url(../images/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  box-shadow: rgba(0,0,0,.2) 0px 7px 10px;
+}
+.flex-mod {
+  align-items: start!important;
 }
 /* /HEADER */
 
@@ -70,6 +96,7 @@ body {
   color: #fff;
   position: fixed;
   bottom: 0;
+  z-index: 999;
   /* display: none; */
 }
 .nav-stick .row {
@@ -104,3 +131,39 @@ body {
   vertical-align: middle;
 }
 /* /nav-stick */
+
+
+/* list-projetos */
+.img-list {
+  height: 230px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.list-projetos .badge-danger {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-left: 30px;
+  margin-bottom: 65px;
+  padding: 5px;
+}
+/* /list-projetos */
+
+
+@media only screen and (max-width: 1100px) { 
+  .bracket {
+    font-size: 200px;
+  }
+}
+
+@media only screen and (max-width: 800px) { 
+  .bracket {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1470px) {
+  header, main, footer, .display-page, .breadcrumb-dn {
+    padding-left: 0px!important;
+  }
+}
