--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -17,6 +17,9 @@ body {
 .va-bottom {
   vertical-align: bottom!important;
 }
+.va-middle {
+  vertical-align: middle!important;
+}
 .list-badges .form-check-input[type=radio]:not(:checked)+label, .list-badges .form-check-input[type=radio]:checked+label {
   padding-left: 27px!important;
 }
